[gd_scene load_steps=6 format=3 uid="uid://domsnyqqkmhhp"]

[ext_resource type="Script" path="res://scene/explore/statsbar/lateral_stats_bar.gd" id="1_7tqpy"]
[ext_resource type="PackedScene" uid="uid://comhmd4npw7y" path="res://scene/explore/statsbar/stat_container.tscn" id="1_xifav"]

[sub_resource type="LabelSettings" id="LabelSettings_ftuio"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_mybyp"]
Button/font_sizes/font_size = 13

[sub_resource type="Theme" id="Theme_gmjvw"]
Button/font_sizes/font_size = 13

[node name="LateralStatsBar" type="ColorRect"]
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.062
offset_left = 1060.0
offset_top = 66.0
offset_right = 1129.42
offset_bottom = 603.824
color = Color(0.560784, 0.631373, 0.741176, 1)
script = ExtResource("1_7tqpy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 6.0
offset_right = 84.0
offset_bottom = 574.0

[node name="PointsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "+3"
label_settings = SubResource("LabelSettings_ftuio")
horizontal_alignment = 1

[node name="StrStatContainer" parent="VBoxContainer" instance=ExtResource("1_xifav")]
layout_mode = 2

[node name="DesStatContainer" parent="VBoxContainer" instance=ExtResource("1_xifav")]
layout_mode = 2
ability_type = 1

[node name="CosStatContainer" parent="VBoxContainer" instance=ExtResource("1_xifav")]
layout_mode = 2
ability_type = 2

[node name="IntStatContainer" parent="VBoxContainer" instance=ExtResource("1_xifav")]
layout_mode = 2
ability_type = 3

[node name="SagStatContainer" parent="VBoxContainer" instance=ExtResource("1_xifav")]
layout_mode = 2
ability_type = 4

[node name="CarStatContainer" parent="VBoxContainer" instance=ExtResource("1_xifav")]
layout_mode = 2
ability_type = 5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer" groups=["lateral_bar"]]
layout_mode = 2
theme = SubResource("Theme_mybyp")
text = "Salva"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="BackButton" type="Button" parent="." groups=["lateral_bar"]]
layout_mode = 2
offset_left = 6.0
offset_top = 546.0
offset_right = 84.0
offset_bottom = 572.0
theme = SubResource("Theme_gmjvw")
text = "Indietro"

[connection signal="update_ability_points" from="VBoxContainer/StrStatContainer" to="." method="_update_ability_points"]
[connection signal="update_ability_points" from="VBoxContainer/DesStatContainer" to="." method="_update_ability_points"]
[connection signal="update_ability_points" from="VBoxContainer/CosStatContainer" to="." method="_update_ability_points"]
[connection signal="update_ability_points" from="VBoxContainer/IntStatContainer" to="." method="_update_ability_points"]
[connection signal="update_ability_points" from="VBoxContainer/SagStatContainer" to="." method="_update_ability_points"]
[connection signal="update_ability_points" from="VBoxContainer/CarStatContainer" to="." method="_update_ability_points"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_update_ability_points"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
